# pdf-extractor

./: .env.example  .gitignore  CHECKPOINT_IMPLEMENTATION.md  CLAUDE.md  README.md  demo_checkpoint.sh  plan.md  pyproject.toml  simulate_interrupt.py  specs_and_reqs.md  test_checkpoint.py  test_resume_workflow.md
prompts/: extraction.md
scripts/: extract_pages.py
src/: __init__.py  checkpoint.py  cli.py  config.py  evaluator.py  latex_generator.py  llm_extractor.py  pdf_processor.py  pipeline.py  reference_resolver.py  reviewer.py
src/models/: __init__.py  anthropic.py  base.py  openai.py
src/schemas/: __init__.py  extraction.py
